# term-record

./: AGENTS.md  LICENSE  README.md  flake.nix  pyproject.toml
modules/: home-manager.nix
scripts/: hooks.zsh
src/termrecord/: __init__.py  config.py
src/termrecord/cli/: __init__.py  client.py  main.py
src/termrecord/models/: __init__.py  config.py  index.py  metadata.py
src/termrecord/watcher/: __init__.py  cleanup.py  exporter.py  file_watcher.py  indexer.py  main.py  server.py
