[project]
name = "termrecord"
version = "0.1.0"
description = "Automatic terminal recording linked to atuin shell history"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "TermRecord Contributors" }
]
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "tomli>=2.0; python_version<'3.11'",
    "aiosqlite>=0.19",
    "watchfiles>=0.21",
]

[project.scripts]
termrecord = "termrecord.cli.main:main"
termrecord-watcher = "termrecord.watcher.main:main"
termrecord-check-path = "termrecord.config:check_path_cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/termrecord"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
